@@ -1,3 +1,12 @@
+TAG: mcvload-4-4-0-3
+DATE: 07/21/2010
+STAFF: sc
+CHANGES:
+1) mcvload.sh - changed call to annotation loader to differentiate
+   btwn mcv and other annotations
+2) mcvQC.py - made invalid marker type and secondary marker
+   type reports non-fatal
+
 TAG: mcvload-4-4-0-2
 DATE: 07/19/2010
 STAFF: sc
